# vtkmMeshSimplification

./: CMakeLists.txt  VectorAnalysis.h  algorithm.h  cp_time.h  mainSerial.cxx  simplify.cxx  simplify.h
math/: Basic.h  Matrix.h  VectorAnalysis.h
